# compressor_css_js

./: CMakeLists.txt  README.md  compressor.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  translator.cpp  translator.h
dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  languagedialog.cpp  languagedialog.h  languagedialog.ui
resources/: resources.qrc
resources/share/icons/: compressor.desktop
scripts/: build-linux.sh  deploy.sh
translations/: compressor_en.qm  compressor_en.ts  compressor_ru.qm  compressor_ru.ts
